--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
-</head>
-<body>
-
+    <link href="style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap"
+      rel="stylesheet"
+    />
+    <script 
+    src="https://kit.fontawesome.com/3da1a747b2.js"
+    crossorigin="anonymous">
+</script>
+  </head>
+  <body>
     <div class="container">
-        <h2>Password Generator</h2>
-        <div class="result-container">
-            <span id="result"></span>
-            <button class="btn" id="clipboard">
-                <i class="far fa-clipboard"></i>
-            </button>
-        </div>
-        <div class="settings">
-            <div class="setting">
-                <label>Password length</label>
-                <input type="number" id="length" min='4' max='20' value='20' />
-            </div>
-            <div class="setting">
-                <label>Include uppercase letters</label> 
-                <input type="checkbox" id="uppercase" checked />
-            </div>
-            <div class="setting">
-                <label>Include lowercase letters</label> 
-                <input type="checkbox" id="lowercase" checked />
-            </div>
-            <div class="setting">
-                <label>Include numbers</label> 
-                <input type="checkbox" id="numbers" checked />
-            </div>
-            <div class="setting">
-                <label>Include symbols</label> 
-                <input type="checkbox" id="symbols" checked />
-            </div>
-        </div>
-        <button class="btn btn-large" id="generate">
-            Generate password
+      <h2>Gerador de Senhas</h2>
+      <div class="result-container">
+        <span id="result"></span>
+        <button class="btn" id="clipboard">
+          <i class="far fa-clipboard"></i>
         </button>
+      </div>
+      <div class="settings">
+        <div class="setting">
+          <label>Caracteres</label>
+          <input type="number" id="length" min="4" max="20" value="8" />
+        </div>
+        <div class="setting">
+          <label>Letras maiúsculas</label>
+          <input type="checkbox" id="uppercase" checked />
+        </div>
+        <div class="setting">
+          <label>Letras minúsculas</label>
+          <input type="checkbox" id="lowercase" checked />
+        </div>
+        <div class="setting">
+          <label>Números</label>
+          <input type="checkbox" id="numbers" checked />
+        </div>
+        <div class="setting">
+          <label>Símbolos</label>
+          <input type="checkbox" id="symbols" checked />
+        </div>
+      </div>
+      <button class="btn btn-large" id="generate">Gerar Senha</button>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
+</html>
